--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,50 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.row {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.td--actions button {
+  visibility: hidden;
+  vertical-align: middle !important;
+}
+
+.is-editing {
+  background-color: var(--light);
+}
+.is-editing .td--actions button,
+.task-item:hover .td--actions button {
+  visibility: visible;
+}
+.is-editing .badge {
+  cursor: pointer;
+}
+
+.badge-light {
+  color: var(--gray) !important;
+}
+
+.tr--controls {
+  text-align: center;
+  background: linear-gradient(0deg, var(--white) 0%, var(--light) 100%);
+}
+
+.td--delete {
+  text-align: left;
+}
+
+.tr--controls td {
+  padding: .25rem !important;
+  border-top: none !important;
+}
+
+.form-control-xs {
+  /* height: calc(1.5em + .5rem + 2px); */
+  padding: .25rem .5rem !important;
+  font-size: 75% !important;
+  line-height: 1.5 !important;
+  border-radius: .2rem !important;
 }
